@@ -1,3 +1,8 @@
+Sun Oct 28 23:52:25 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/test_document.rb: Add tests for parsing XML encoded
+	  by UTF-8 with BOM.
+
 Sun Oct 28 23:47:09 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/source.rb: Move encoding detection code to base class.
